[package]
name = "tankgameagain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_chacha = "0.3"
base64 = "0.21"
k256 = { version = "0.13", features = ["ecdsa-core", "ecdsa", "sha256", "ecdh"] }
thiserror = "*"
futures = "0.3"
color-eyre = "0.6"
tracing = "0.1.40"
serde = "1.0"
serde_json = "1.0"
poem = "1.3"
poem-openapi = { version = "3.0", features = [ "swagger-ui" ]}
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql" ] }
tokio = { version = "1.35", features = [ "rt-multi-thread" ]}
tanktacticsgame = { path = "./tanktacticsgame", features = ["openapi", "serde"]}