[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = {version = "0.8", features = ["suspense"] }
web-sys = {version = "0.3", features = ["PointerEvent", "Storage", "Window", "Request", "Response", "RequestInit", "RequestMode", "Headers", "Navigator", "Clipboard", "WebSocket"]}
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand_chacha = "0.3"
base64 = "0.21"
k256 = { version = "0.13", features = ["ecdsa-core", "ecdsa", "sha256", "ecdh"] }

getrandom = { version = "0.2", features = ["js"] }

tanktacticsgame = { path = "../tanktacticsgame", features = ["serde"]}