[package]
name = "tanktacticsgame"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
rand_chacha = "0.3"
base64 = "0.21"
k256 = { version = "0.13", features = ["ecdsa-core", "ecdsa", "sha256", "ecdh"] }

poem = {version = "1.3", features = ["websocket"], optional = true}
poem-openapi = { version = "3.0", features = [ "swagger-ui" ], optional = true}

serde = { version = "1.0", features = ["derive"], optional = true }


[features]
openapi = ["poem", "poem-openapi"]
serde = ["dep:serde"]